# rove

./: .gitignore  LICENSE  README.md  SPEC.md  pyproject.toml  requirements.txt
src/glean/: __init__.py  cli.py  config.py  context_builder.py  database.py  logging.py  search_agent.py
src/glean/api/: __init__.py  server.py
src/glean/plugins/: __init__.py  base.py
src/glean/plugins/github/: __init__.py  client.py
src/glean/plugins/jira/: __init__.py  auth.py  client.py
src/glean/plugins/slack/: __init__.py  client.py
src/glean/scheduler/: __init__.py  tasks.py
src/rove/: __init__.py  cli.py  config.py  context_builder.py  database.py  logging.py  search_agent.py  ticket_analyzer.py
src/rove/api/: __init__.py  server.py
src/rove/plugins/: __init__.py  base.py
src/rove/plugins/github/: __init__.py  client.py
src/rove/plugins/jira/: __init__.py  auth.py  client.py
src/rove/plugins/slack/: __init__.py  client.py
src/rove/scheduler/: __init__.py  tasks.py
tests/: __init__.py  conftest.py  test_config.py  test_context_builder.py  test_database.py  test_search_agent.py
